--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,246 @@
-body {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url(./font/Inter-Light.ttf);
+  font-weight: 300;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url(./font/Inter-Regular.ttf);
+  font-weight: 400;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url(./font/Inter-Medium.ttf);
+  font-weight: 500;
+}
+@font-face {
+  font-family: 'Inter';
+  src: url(./font/Inter-SemiBold.ttf);
+  font-weight: 600;
+}
+
+body {
+  color: #fff;
+  background: #252525;
+  margin: 0;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
+    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.places-container {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+  width: 300px;
+}
+
+.map-container {
+  width: 100%;
+  height: 100vh;
+}
+
+.rw-list {
+  margin-top: 0.5rem;
+}
+
+input,
+.rw-list {
+  box-shadow: 1px 1px 1px 0px #1d1d1d, -1px -1px 1px 0px #323232;
+  background: none;
+  border-radius: 0.5rem;
+  transition: 0.15s;
+}
+input {
+  color: inherit;
+  font-family: inherit;
+  width: 100%;
+  padding: 0.7rem;
+  font-size: 16px;
+  border: none;
+  outline: none;
+}
+input:focus {
+  box-shadow: -1px -1px 1px 0px #1d1d1d, 1px 1px 1px 0px #323232;
+}
+input:disabled {
+  opacity: 0.3;
+}
+
+.rw-list-option {
+  padding: 0.4rem 0.5rem;
+  line-height: 1.3;
+  cursor: pointer;
+}
+.rw-list-option:hover {
+  background: #323232;
+}
+.rw-list-option:first-child {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+.rw-list-option:last-child {
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+}
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 2rem 0;
+}
+
+.club-reg {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem 0;
+}
+
+h1 {
+  font-size: 1.7em;
+}
+
+.rw-list-empty {
+  margin-top: 0.5rem;
+  padding: 0.5rem 0;
+  color: red;
+  text-align: center;
 }
