--- a/src/index.css
+++ b/src/index.css
@@ -165,13 +165,9 @@ code {
   box-sizing: border-box;
 }
 
-.places-container {
-  position: absolute;
-  top: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 10;
-  width: 300px;
+.main {
+  display: flex;
+  width: 100vw;
 }
 
 .map-container {
@@ -223,22 +219,16 @@ input:disabled {
   border-bottom-right-radius: 0.5rem;
 }
 
-.inputs {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  margin: 2rem 0;
-}
-
 .club-reg {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 1rem 0;
+  padding: 3rem 2rem;
+  max-width: 30vw;
 }
 
 h1 {
   font-size: 1.7em;
+  margin-bottom: 1.5rem;
 }
 
 .rw-list-empty {
